shell-scripts/ebtables_bridge.txt
# Generated by ebtables-save v1.0 on 2014. 08. 04. (¿ù) 16:53:05 KST
*filter
:INPUT ACCEPT
:FORWARD ACCEPT
:OUTPUT ACCEPT
-A FORWARD -p ARP --arp-ip-src 192.168.0.0/24 -j DROP
-A FORWARD -p ARP --arp-ip-dst 192.168.0.0/24 -j DROP
-A FORWARD -p ARP --arp-ip-src 218.233.95.70 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.71 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.72 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.73 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.74 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.75 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.80 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.81 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.84 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.151 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.152 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.153 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.154 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.155 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.156 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.157 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.158 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.159 -j ACCEPT
-A FORWARD -p ARP --arp-ip-src 218.233.95.160 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.70 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.71 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.72 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.73 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.74 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.75 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.80 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.81 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.84 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.151 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.152 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.153 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.154 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.155 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.156 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.157 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.158 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.159 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 218.233.95.0/24 --arp-ip-dst 218.233.95.160 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-src 59.25.181.0/24 --arp-ip-dst 59.25.181.30 -j ACCEPT
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 59.25.181.30 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.70 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.71 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.72 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.73 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.74 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.75 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.80 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.81 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.84 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.150 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.151 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.152 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.153 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.154 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.155 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.156 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.157 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.158 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.159 -j DROP
-A FORWARD -i eth0 -p ARP --arp-ip-dst ! 218.233.95.160 -j DROP
