shell-scripts/iptables_bridge.txt
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 9744 -j ACCEPT
# weblogic BEGIN
-A INPUT -m state --state NEW -m tcp -p tcp --dport 7001:7999 -j ACCEPT
# weblogic END
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8088 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8080 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8888 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8082 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 9736 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 9737 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 9900 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8629 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8889 -j ACCEPT

# sysmaster
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22000 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22001 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22002 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22003 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22004 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22005 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22006 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -i br0 -s 192.168.0.0/24 -j DROP
-A FORWARD -p udp --dport 67 -j DROP
-A FORWARD -p udp --dport 68 -j DROP
#-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
